--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "catalogo-rick-and-morty",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node -p \"'/* eslint-disable @typescript-eslint/quotes */ const LIB_VERSION = ' + JSON.stringify(require('./package.json').version) + '; export default LIB_VERSION;'\" > src/version.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
