--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "typescript": "5.0.3"
   },
